kubernetes/overlays/us-east-1/prod/replicas.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: analyzer
spec:
  replicas: 2

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: anonymizer
spec:
  replicas: 2

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ocr
spec:
  replicas: 2
